# omni_vad_demo

./: README.md  api_server.py  audio_agent.py  cert.pem  key.pem  pyproject.toml  requirements.txt  start_https_server.bat  start_https_server.sh  vad_test.html
archive/: audio-client.js  base64_decode.py  hello.py  main.py  vad_test.html
static/: index.html
static/css/: styles.css
static/js/: app.js
