[project]
name = "omni-vad-demo"
version = "0.1.0"
description = "智能语音对话系统，基于阿里云千问Qwen-Omni模型"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "项目作者"}
]

dependencies = [
    "numpy",
    "openai>=1.2.0",
    "pyaudio",
    "soundfile",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "agno>=0.1.0",
    "python-multipart>=0.0.6",
    "requests>=2.28.2",
    "pydantic>=1.10.7"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Documentation = "https://github.com/username/omni-vad-demo"
Source = "https://github.com/username/omni-vad-demo"
